Fixed padding on mobile in about text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,7 +384,8 @@ p {
   background-color: #F6B61E;
 }
 
-@media (max-width: 600px) {#about .lead {font-size: 12px; line-height: 20px;}}
+@media (max-width: 600px) {#about .lead {font-size: 12px; line-height: 20px; padding-left: 1rem;
+    padding-right: 1rem;}}
 
 /*--------------------------------------------------------------
 # Journal
